// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notificationAbilities should report Create / Update / Delete actions aren't supported for external vanilla alertmanager 1`] = `
{
  "create-contact-point": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "create-notification-policy": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "create-notification-template": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "create-silence": {
    "anyOfPermissions": [
      "alert.instances.external:write",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "create-time-interval": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "decrypt-secrets": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "delete-contact-point": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "delete-notification-policy": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "delete-notification-template": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "delete-time-interval": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "edit-contact-points": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "edit-notification-template": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "export-contact-point": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "export-notification-policies": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "export-time-intervals": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "preview-silenced-alerts": {
    "anyOfPermissions": [
      "alert.instances.external:read",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "update-notification-policy-tree": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "update-silence": {
    "anyOfPermissions": [
      "alert.instances.external:write",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "update-time-interval": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "view-alert-groups": {
    "anyOfPermissions": [
      "alert.instances.external:read",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "view-autogenerated-policy-tree": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "view-contact-point": {
    "anyOfPermissions": [
      "alert.notifications.external:read",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "view-notification-policy-tree": {
    "anyOfPermissions": [
      "alert.notifications.external:read",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "view-notification-template": {
    "anyOfPermissions": [
      "alert.notifications.external:read",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "view-silence": {
    "anyOfPermissions": [
      "alert.instances.external:read",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "view-time-interval": {
    "anyOfPermissions": [
      "alert.notifications.external:read",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
}
`;

exports[`notificationAbilities should report everything except exporting for Mimir alertmanager 1`] = `
{
  "create-contact-point": {
    "granted": true,
  },
  "create-notification-policy": {
    "granted": true,
  },
  "create-notification-template": {
    "granted": true,
  },
  "create-silence": {
    "granted": true,
  },
  "create-time-interval": {
    "granted": true,
  },
  "decrypt-secrets": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "delete-contact-point": {
    "granted": true,
  },
  "delete-notification-policy": {
    "granted": true,
  },
  "delete-notification-template": {
    "granted": true,
  },
  "delete-time-interval": {
    "granted": true,
  },
  "edit-contact-points": {
    "granted": true,
  },
  "edit-notification-template": {
    "granted": true,
  },
  "export-contact-point": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "export-notification-policies": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "export-time-intervals": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "preview-silenced-alerts": {
    "granted": true,
  },
  "update-notification-policy-tree": {
    "granted": true,
  },
  "update-silence": {
    "granted": true,
  },
  "update-time-interval": {
    "granted": true,
  },
  "view-alert-groups": {
    "granted": true,
  },
  "view-autogenerated-policy-tree": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "view-contact-point": {
    "granted": true,
  },
  "view-notification-policy-tree": {
    "granted": true,
  },
  "view-notification-template": {
    "granted": true,
  },
  "view-silence": {
    "granted": true,
  },
  "view-time-interval": {
    "granted": true,
  },
}
`;

exports[`notificationAbilities should report everything is applicable for the builtin alertmanager 1`] = `
{
  "create-contact-point": {
    "anyOfPermissions": [
      "alert.notifications:write",
      "alert.notifications.receivers:create",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "create-notification-policy": {
    "anyOfPermissions": [
      "alert.notifications:write",
      "alert.notifications.routes:write",
      "notifications.alerting.grafana.app/routingtrees:create",
      "notifications.alerting.grafana.app/routingtrees:update",
      "notifications.alerting.grafana.app/routingtrees:delete",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "create-notification-template": {
    "anyOfPermissions": [
      "alert.notifications:write",
      "alert.notifications.templates:write",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "create-silence": {
    "anyOfPermissions": [
      "alert.instances:create",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "create-time-interval": {
    "anyOfPermissions": [
      "alert.notifications:write",
      "alert.notifications.time-intervals:write",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "decrypt-secrets": {
    "anyOfPermissions": [
      "alert.provisioning.secrets:read",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "delete-contact-point": {
    "anyOfPermissions": [
      "alert.notifications:write",
      "alert.notifications.receivers:write",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "delete-notification-policy": {
    "anyOfPermissions": [
      "alert.notifications:write",
      "alert.notifications.routes:write",
      "notifications.alerting.grafana.app/routingtrees:create",
      "notifications.alerting.grafana.app/routingtrees:update",
      "notifications.alerting.grafana.app/routingtrees:delete",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "delete-notification-template": {
    "anyOfPermissions": [
      "alert.notifications:write",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "delete-time-interval": {
    "anyOfPermissions": [
      "alert.notifications:write",
      "alert.notifications.time-intervals:write",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "edit-contact-points": {
    "anyOfPermissions": [
      "alert.notifications:write",
      "alert.notifications.receivers:write",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "edit-notification-template": {
    "anyOfPermissions": [
      "alert.notifications:write",
      "alert.notifications.templates:write",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "export-contact-point": {
    "granted": true,
  },
  "export-notification-policies": {
    "granted": true,
  },
  "export-time-intervals": {
    "granted": true,
  },
  "preview-silenced-alerts": {
    "granted": true,
  },
  "update-notification-policy-tree": {
    "anyOfPermissions": [
      "alert.notifications:write",
      "alert.notifications.routes:write",
      "notifications.alerting.grafana.app/routingtrees:create",
      "notifications.alerting.grafana.app/routingtrees:update",
      "notifications.alerting.grafana.app/routingtrees:delete",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "update-silence": {
    "anyOfPermissions": [
      "alert.instances:write",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "update-time-interval": {
    "anyOfPermissions": [
      "alert.notifications:write",
      "alert.notifications.time-intervals:write",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "view-alert-groups": {
    "granted": true,
  },
  "view-autogenerated-policy-tree": {
    "anyOfPermissions": [],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "view-contact-point": {
    "granted": true,
  },
  "view-notification-policy-tree": {
    "granted": true,
  },
  "view-notification-template": {
    "granted": true,
  },
  "view-silence": {
    "granted": true,
  },
  "view-time-interval": {
    "granted": true,
  },
}
`;
